[gd_scene load_steps=7 format=3 uid="uid://dme1qovut5fue"]

[ext_resource type="Script" path="res://components/item_generator.gd" id="1_4ocaa"]
[ext_resource type="PackedScene" uid="uid://dgqyioiw36j8c" path="res://components/player_detection_area.tscn" id="1_cgnjw"]
[ext_resource type="AudioStream" uid="uid://ch40b8ps40ub4" path="res://audio/Pause.wav" id="2_gqsj3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5752u"]
albedo_color = Color(0.54, 0.1998, 0.1998, 1)
metallic = 1.0
metallic_specular = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_2ctx3"]
material = SubResource("StandardMaterial3D_5752u")
size = Vector3(1, 0.05, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ua8e6"]

[node name="ItemGenerator" type="Node3D"]
script = ExtResource("1_4ocaa")
spawn_item_sfx = ExtResource("2_gqsj3")

[node name="ButtonMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025, 0)
mesh = SubResource("BoxMesh_2ctx3")
skeleton = NodePath("../PlayerDetectionArea")

[node name="PlayerDetectionArea" parent="." instance=ExtResource("1_cgnjw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("BoxShape3D_ua8e6")

[node name="SpawnLocation" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.14721, 1.19536, 0)
